Modify the file

--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -67,11 +67,26 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info load-hidden">
             <p class="about-wrapper__info-text">
-              This is where you can describe about yourself. The more you
-              describe about yourself, the more chances you can!
+              I am a student at Dalhousie University, commenced my undergraduate study in the Fall 2022 in the Bachelor
+              of Applied Computer Science program.
+              I am a proud receiver of Women in Tech Scholarship at Dal and
+              really looking forward to starting the new chapter of my life at Dal.
             </p>
             <p class="about-wrapper__info-text">
-              Extra Information about you! like hobbies and your goals.
+              After fiddling with technology on my own I decided to pursue computer science during
+              high school where I was introduced to Python fundamentals.
+              Keen to learn beyond textbooks, I readily put my knowledge at work by
+              developing a Python-powered Teacher Management System.
+              Additionally, I completed a few online courses with Coursera and Udemy
+              covering topics like client-side programming, OOP fundamentals,
+              and data structures and algorithms. <br>
+              I created a Github profile for continuous development and
+              contributed to an open-source project that aims at reducing CO2
+              emission in the world. I also joined a Discord community via one of my
+              Udemy courses where fellow students help each other with understanding
+              the code and debugging the errors. Through this community,
+              I have had the pleasure of helping many of my peers as well as receiving
+              instant help for my own doubts.
             </p>
             <span class="d-flex mt-3">
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume.pdf">
