--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -113,11 +113,10 @@
               <h3 class="project-wrapper__text-title">LearnJava</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                  I created this website in my first year at Dal, when I commenced my study in Intro to Web Design &
+                  Development course.
+                  This website focuses on teaching Java basics to the beginners, and uses DOM event handlers concepts.
+                  Please click See Live to view the website.
                 </p>
               </div>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
@@ -147,20 +146,19 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
-              <h3 class="project-wrapper__text-title">Project Title 1</h3>
+              <h3 class="project-wrapper__text-title">Top 4 books</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                  Top 4 books- is my first website, built in high school after completing the Web Development course
+                  from Udemy.
                 </p>
               </div>
-              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="#!">
+              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
+                href="https://main--super-chimera-4f879c.netlify.app/">
                 See Live
               </a>
-              <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="#!">
+              <a rel="noreferrer" target="_blank" class="cta-btn text-color-main"
+                href="https://github.com/FatemaBohra/MyFirst_DeployedWebsite/tree/main">
                 Source Code
               </a>
             </div>
@@ -222,9 +220,9 @@
     <div class="container">
       <h2 class="section-title">Contact</h2>
       <div class="contact-wrapper load-hidden">
-        <p class="contact-wrapper__text">[Put your call to action here]</p>
-        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:example@email.com">Call to
-          Action</a>
+        <p class="contact-wrapper__text">Connect, Communicate, Conquer</p>
+        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume"
+          href="mailto:fatema.bohra3004@gmail.com">Unleash the Power of Email!</a>
       </div>
     </div>
   </section>
@@ -237,13 +235,10 @@
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
       <div class="social-links">
-        <a rel="noreferrer" href="#!" target="_blank">
-          <i class="fa fa-twitter fa-inverse"></i>
-        </a>
-        <a rel="noreferrer" href="#!" target="_blank">
+        <a rel="noreferrer" href="https://www.linkedin.com/in/fatema-bohra-3b8356226/" target="_blank">
           <i class="fa fa-linkedin fa-inverse"></i>
         </a>
-        <a rel="noreferrer" href="#!" target="_blank">
+        <a rel="noreferrer" href="https://github.com/FatemaBohra" target="_blank">
           <i class="fa fa-github fa-inverse"></i>
         </a>
       </div>
@@ -253,16 +248,7 @@
       <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
       <p class="footer__text">
         © 2021 - Template developed by
-        <a rel="noreferrer" href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
-      </p>
-
-      <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-      <p class="mt-3 pt-3">
-        <a rel="noreferrer" class="github-button" href="https://github.com/cobidev/simplefolio/fork"
-          data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
-          aria-label="Fork ntkme/github-buttons on GitHub">Fork</a>
-        <a rel="noreferrer" class="github-button" href="https://github.com/cobidev/simplefolio" data-icon="octicon-star"
-          data-size="large" data-show-count="true" aria-label="Star cobidev/simplefolio on GitHub">Star</a>
+        <a rel="noreferrer" href="https://github.com/FatemaBohra" target="_blank">Fatema Bohra</a>
       </p>
     </div>
   </footer>
