Modify the simplefolio

--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -79,7 +79,7 @@
               developing a Python-powered Teacher Management System.
               Additionally, I completed a few online courses with Coursera and Udemy
               covering topics like client-side programming, OOP fundamentals,
-              and data structures and algorithms. <br>
+              and data structures and algorithms. <br><br>
               I created a Github profile for continuous development and
               contributed to an open-source project that aims at reducing CO2
               emission in the world. I also joined a Discord community via one of my
@@ -110,12 +110,13 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
-              <h3 class="project-wrapper__text-title">LearnJava</h3>
+              <h3 class="project-wrapper__text-title">LearnJava App</h3>
               <div>
                 <p class="mb-4">
                   I created this website in my first year at Dal, when I commenced my study in Intro to Web Design &
                   Development course.
-                  This website focuses on teaching Java basics to the beginners, and uses DOM event handlers concepts.
+                  This website focuses on teaching Java basics to the beginners, and uses DOM event handlers
+                  concepts.<br>
                   Please click See Live to view the website.
                 </p>
               </div>
@@ -146,19 +147,28 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
-              <h3 class="project-wrapper__text-title">Top 4 books</h3>
+              <h3 class="project-wrapper__text-title">React App</h3>
               <div>
                 <p class="mb-4">
-                  Top 4 books- is my first website, built in high school after completing the Web Development course
-                  from Udemy.
+                  Learning through Udemy Zero-to-Mastery Academy, I got introduced to React concept and I readily put my
+                  knowledge at work by
+                  developing a RoboFriends App via React.<br>
+                  This project taught me:
+                <ol>
+                  <li>Npm + Npm script</li>
+                  <li>Git + GitHub + Open Source projects</li>
+                  <li>React.js + React Hooks</li>
+                  <li>Command Line + Developer Environment</li>
+                </ol>
                 </p>
+                <p>Please click See Live to view the website.</p>
               </div>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
-                href="https://main--super-chimera-4f879c.netlify.app/">
+                href="https://fatemabohra.github.io/robofriends-1/">
                 See Live
               </a>
               <a rel="noreferrer" target="_blank" class="cta-btn text-color-main"
-                href="https://github.com/FatemaBohra/MyFirst_DeployedWebsite/tree/main">
+                href="https://github.com/FatemaBohra/robofriends-1">
                 Source Code
               </a>
             </div>
