Modify the simplefolio file

--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -153,12 +153,14 @@
                   Learning through Udemy Zero-to-Mastery Academy, I got introduced to React concept and I readily put my
                   knowledge at work by
                   developing a RoboFriends App via React.<br>
-                  This project taught me:
                 <ol>
-                  <li>Npm + Npm script</li>
-                  <li>Git + GitHub + Open Source projects</li>
-                  <li>React.js + React Hooks</li>
-                  <li>Command Line + Developer Environment</li>
+                  <p>This project taught me:</p>
+                  <p>
+                    <li>Npm + Npm script</li>
+                    <li>Git + GitHub + Open Source projects</li>
+                    <li>React.js + React Hooks</li>
+                    <li>Command Line + Developer Environment</li>
+                  </p>
                 </ol>
                 </p>
                 <p>Please click See Live to view the website.</p>
