--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
 <html lang="en" class="sr">
 
@@ -110,22 +99,51 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
-              <h3 class="project-wrapper__text-title">LearnJava App</h3>
+              <h3 class="project-wrapper__text-title">Face Detect - smartBrain</h3>
               <div>
                 <p class="mb-4">
-                  I created this website in my first year at Dal, when I commenced my study in Intro to Web Design &
-                  Development course.
-                  This website focuses on teaching Java basics to the beginners, and uses DOM event handlers
-                  concepts.<br>
-                  Please click See Live to view the website.
+                  Face Detect - smartBrain is a web application that utilizes facial recognition technology to detect
+                  faces in images. It allows users to register an account, sign in, and submit an image URL for face
+                  detection. The application keeps track of the number of images the user has submitted and displays the
+                  count on their profile.
+
+                  The project consists of a frontend and a backend. The frontend is built
+                  using React, while the backend is implemented with Node.js and Express.
+                  The communication between the frontend and backend is done through API calls.
+
+                <ol>
+                  Key features of the project include:
+                  <p>
+                    <li>User Registration and Authentication: Users can create an account and
+                      securely sign in using their credentials.
+                    </li>
+                    <li>Image Submission: Users can enter the URL of an image to be processed by
+                      the facial recognition algorithm.
+                    </li>
+                    <li>
+                      Face Detection: The backend utilizes the Clarifai API to analyze the
+                      submitted image and detect faces.
+                    </li>
+                    <li>
+                      User Profile: Each user has a profile that displays their name and the
+                      number of images they have submitted.
+                    </li>
+                  </p>
+                </ol>
+
+                The project showcases the integration of frontend and backend technologies,
+                as well as the usage of external APIs for advanced functionality.
+                It demonstrates the implementation of user authentication, data storage
+                using a PostgreSQL database, and the handling of API requests for image
+                processing.
                 </p>
               </div>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
-                href="https://fatemabohra.github.io/A3_1170_website/Webpages/">
+                href="https://smart-brain-m5x0.onrender.com/">
                 See Live
               </a>
               <a rel="noreferrer" target="_blank" class="cta-btn text-color-main"
-                href="https://github.com/FatemaBohra/FatemaBohra.github.io/tree/main">
+                href="https://github.com/FatemaBohra/smart-brain">
                 Source Code
               </a>
             </div>
@@ -192,20 +210,22 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
-              <h3 class="project-wrapper__text-title">Project Title 2</h3>
+              <h3 class="project-wrapper__text-title">LearnJava App</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                  I created this website in my first year at Dal, when I commenced my study in Intro to Web Design &
+                  Development course.
+                  This website focuses on teaching Java basics to the beginners, and uses DOM event handlers
+                  concepts.<br>
+                  Please click See Live to view the website.
                 </p>
               </div>
-              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="#!">
+              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
+                href="https://fatemabohra.github.io/A3_1170_website/Webpages/">
                 See Live
               </a>
-              <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="#!">
+              <a rel="noreferrer" target="_blank" class="cta-btn text-color-main"
+                href="https://github.com/FatemaBohra/FatemaBohra.github.io/tree/main">
                 Source Code
               </a>
             </div>
@@ -234,7 +254,7 @@
       <div class="contact-wrapper load-hidden">
         <p class="contact-wrapper__text">Connect, Communicate, Conquer</p>
         <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume"
-          href="mailto:fatema.bohra3004@gmail.com">Unleash the Power of Email!</a>
+          href="mailto:fatema.bohra3004@gmail.com">Email</a>
       </div>
     </div>
   </section>
@@ -259,7 +279,7 @@
 
       <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
       <p class="footer__text">
-        © 2021 - Template developed by
+        © 2021 - Developed by
         <a rel="noreferrer" href="https://github.com/FatemaBohra" target="_blank">Fatema Bohra</a>
       </p>
     </div>
