Modify the file

--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -109,10 +109,10 @@
 
                   The project consists of a frontend and a backend. The frontend is built
                   using React, while the backend is implemented with Node.js and Express.
-                  The communication between the frontend and backend is done through API calls.
+                  The communication between the frontend and backend is done through API calls.</p>
 
                 <ol>
-                  Key features of the project include:
+                  <p>Key features of the project include:</p>
                   <p>
                     <li>User Registration and Authentication: Users can create an account and
                       securely sign in using their credentials.
@@ -130,13 +130,11 @@
                     </li>
                   </p>
                 </ol>
-
-                The project showcases the integration of frontend and backend technologies,
-                as well as the usage of external APIs for advanced functionality.
-                It demonstrates the implementation of user authentication, data storage
-                using a PostgreSQL database, and the handling of API requests for image
-                processing.
-                </p>
+                <p>The project showcases the integration of frontend and backend technologies,
+                  as well as the usage of external APIs for advanced functionality.
+                  It demonstrates the implementation of user authentication, data storage
+                  using a PostgreSQL database, and the handling of API requests for image
+                  processing.</p>
               </div>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
                 href="https://smart-brain-m5x0.onrender.com/">
