Modify the file again

--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -105,32 +105,13 @@
                   Face Detect - smartBrain is a web application that utilizes facial recognition technology to detect
                   faces in images. It allows users to register an account, sign in, and submit an image URL for face
                   detection. The application keeps track of the number of images the user has submitted and displays the
-                  count on their profile.
+                  count on their profile.<br>
 
                   The project consists of a frontend and a backend. The frontend is built
                   using React, while the backend is implemented with Node.js and Express.
-                  The communication between the frontend and backend is done through API calls.</p>
+                  The communication between the frontend and backend is done through API calls.<br>
 
-                <ol>
-                  <p>Key features of the project include:</p>
-                  <p>
-                    <li>User Registration and Authentication: Users can create an account and
-                      securely sign in using their credentials.
-                    </li>
-                    <li>Image Submission: Users can enter the URL of an image to be processed by
-                      the facial recognition algorithm.
-                    </li>
-                    <li>
-                      Face Detection: The backend utilizes the Clarifai API to analyze the
-                      submitted image and detect faces.
-                    </li>
-                    <li>
-                      User Profile: Each user has a profile that displays their name and the
-                      number of images they have submitted.
-                    </li>
-                  </p>
-                </ol>
-                <p>The project showcases the integration of frontend and backend technologies,
+                  The project showcases the integration of frontend and backend technologies,
                   as well as the usage of external APIs for advanced functionality.
                   It demonstrates the implementation of user authentication, data storage
                   using a PostgreSQL database, and the handling of API requests for image
@@ -163,7 +144,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
-              <h3 class="project-wrapper__text-title">React App</h3>
+              <h3 class="project-wrapper__text-title">RoboFriends</h3>
               <div>
                 <p class="mb-4">
                   Learning through Udemy Zero-to-Mastery Academy, I got introduced to React concept and I readily put my
@@ -179,7 +160,6 @@
                   </p>
                 </ol>
                 </p>
-                <p>Please click See Live to view the website.</p>
               </div>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
                 href="https://fatemabohra.github.io/robofriends-1/">
