Modify the file again

--- a/simplefolio/src/index.html
+++ b/simplefolio/src/index.html
@@ -111,8 +111,6 @@
                   using React, while the backend is implemented with Node.js and Express.
                   The communication between the frontend and backend is done through API calls.<br>
 
-                  The project showcases the integration of frontend and backend technologies,
-                  as well as the usage of external APIs for advanced functionality.
                   It demonstrates the implementation of user authentication, data storage
                   using a PostgreSQL database, and the handling of API requests for image
                   processing.</p>
@@ -149,15 +147,14 @@
                 <p class="mb-4">
                   Learning through Udemy Zero-to-Mastery Academy, I got introduced to React concept and I readily put my
                   knowledge at work by
-                  developing a RoboFriends App via React.<br>
+                  developing a RoboFriends App via React.</p>
+                <p>This project taught me:</p>
+                <p>
                 <ol>
-                  <p>This project taught me:</p>
-                  <p>
-                    <li>Npm + Npm script</li>
-                    <li>Git + GitHub + Open Source projects</li>
-                    <li>React.js + React Hooks</li>
-                    <li>Command Line + Developer Environment</li>
-                  </p>
+                  <li>Npm + Npm script</li>
+                  <li>Git + GitHub + Open Source projects</li>
+                  <li>React.js + React Hooks</li>
+                  <li>Command Line + Developer Environment</li>
                 </ol>
                 </p>
               </div>
@@ -191,11 +188,10 @@
               <h3 class="project-wrapper__text-title">LearnJava App</h3>
               <div>
                 <p class="mb-4">
-                  I created this website in my first year at Dal, when I commenced my study in Intro to Web Design &
-                  Development course.
-                  This website focuses on teaching Java basics to the beginners, and uses DOM event handlers
-                  concepts.<br>
-                  Please click See Live to view the website.
+                  In my first year at Dal, when I commenced my study in Intro to Web Design &
+                  Development course, I created this website, which consists the concepts of CSS Grid + CSS Layouts, DOM
+                  Manipulations and Javascript Object
+                  concepts.
                 </p>
               </div>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
